tests/fixtures/invalid/bool_rshift_none.py
# Cannot right shift Bool and None
x: bool = True >> None
